src/assets/css/responsive.css
/* Navigation */
@media (max-width: 1199.98px) {
  #menu .app-logo img {
    width: 69px;
    margin-right: 50px;
  }
  #menu .navbar-collapse ul li a {
    margin: 9px 16px 0 16px !important;
  }
}
@media (max-width: 991.98px) {
  #menu .app-logo img {
    width: 69px;
    margin-right: 30px;
  }
  #menu .lang-selector-list .MuiButtonBase-root {
    padding: 12px 4px;
  }
  #menu .navbar-collapse ul li a {
    margin: 9px 3px 0 3px !important;
  }
}
@media (max-width: 767.98px) {
  #menu .navbar-header {
    width: 100%;
  }
  #menu .lang-selector {
    margin-left: auto;
  }
  #menu .navbar-collapse {
    background-color: #5ca9fb;
  }
  #menu .navbar-collapse ul li {
    width: 100%;
  }
}
@media (max-width: 575.98px) {
  #menu .app-logo img {
    margin-right: 20px;
  }
  /* #menu .lang-selector .lang-selector-list {
    display: none;
  }
  #menu .lang-selector .lang-selector-dropdown {
    display: block;
  } */
}

/* Header Section */
@media (max-width: 1399.98px) {
  .intro h1 {
    font-size: 70px;
  }
  .intro p {
    font-size: 20px;
  }
  header .intro-text {
    padding-top: 350px;
    padding-bottom: 200px;
    text-align: center;
  }
}
@media (max-width: 1199.98px) {
  .intro h1 {
    font-size: 60px;
  }
}
@media (max-width: 991.98px) {
  .intro h1 {
    font-size: 48px;
  }
}
@media (max-width: 767.98px) {
  .intro h1 {
    font-size: 44px;
  }
}
@media (max-width: 575.98px) {
  /* Header Section */
  .intro h1 {
    font-size: 40px;
  }
  header .intro-text {
    padding-top: 200px;
    padding-bottom: 100px;
  }
}

@media (max-width: 575.98px) {
  /* Header Section */
  .intro h1 {
    font-size: 40px;
  }
  header .intro-text {
    padding-top: 200px;
    padding-bottom: 100px;
  }
  /* About Section */
  #about {
    padding: 40px 0;
  }
  #about h2 {
    font-size: 32px;
  }
  /* Portfolio Section */
  #portfolio {
    padding: 40px 0;
  }
}

.aligned-row {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
}
.aligned-row::before {
  display: block;
}

